<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/content_padding"
    tools:context="ru.mail.park.lecture3.MainActivity">

    <Button
        android:id="@+id/btn_calc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_calc"/>

    <Button
        android:id="@+id/btn_timer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_timer"/>

    <Button
        android:id="@+id/btn_intents"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_intents"/>
</LinearLayout>
